--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
     <div class="col-sm-4">
         <h3 class="text-center">Minifoguetes</h3><hr>
 		<h4 class="text-justify margin-sm" style="height: 250px;">Consiste na elaboração de minifoguetes das categorias A, B, C, D e E para a participação do Festival de Minifoguetes de Curitiba, organizada pelo Grupo de Foguetes Carl Sagan, da UFPR. Nesse projeto a equipe tem como objetivo desenvolver técnicas de baixo custo para manufatura de minifoguetes e suas tecnologias.</h4>
-        <div class="col-sm-4 text-center">
+        <div class="text-center">
         <span class="glyphicon" id="side"><img class="img-responsive img-circle" style="max-height: 300px; max-width: 300px;" src="images/foguete6.jpg" title="Lançamento de Minifoguete" alt="Lançamento de Minifoguete"></span>
         </div>
     </div>
