--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-<nav id="mynav" class="navbar navbar-default navbar-fixed-top">
+<nav id="mynav" style="width: 100% !important;" class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -54,7 +54,7 @@
       <p class="text-justify margin-lg">Fundada em 2014 originalmente como FNAF, abrangia apenas alunos e alunas da Engenharia Mecânica. Devido ao seu crescimento e entrada de alunos de outros institutos teve seu nome alterado em 2017 para Equipe Antares de Espaçomodelismo Unicamp.</p>
     </div>
     <div class="col-sm-4 text-center">
-      <span class="glyphicon"><img class="img-thumbnail img-responsive margin-img" style="max-height: 300px; max-width: 300px;" src="images/foguete2.jpg" title="Lançamento do Mini-Foguete" alt="Lançamento do Mini-Foguete"></span>
+      <span class="glyphicon"><img class="img-rounded img-responsive margin-img" style="max-height: 300px; max-width: 300px;" src="images/foguete2.jpg" title="Lançamento do Mini-Foguete" alt="Lançamento do Mini-Foguete"></span>
     </div>
   </div>
 </div>
@@ -62,7 +62,7 @@
 <div class="container-fluid bg-2">
   <div class="row">
     <div class="col-sm-4 text-center">
-		<span class="glyphicon"><img class="img-thumbnail img-responsive margin-img" style="max-height: 300px; max-width: 300px;" src="images/foguete1.jpg" 
+		<span class="glyphicon"><img class="img-rounded img-responsive margin-img" style="max-height: 300px; max-width: 300px;" src="images/foguete1.jpg" 
         title="Mini-Foguete" alt="Mini-Foguete"></span>
     </div>
     <div class="col-sm-8">
@@ -80,10 +80,11 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
     <div class="col-sm-12">
         <h2>Membros</h2><br>
 		<h4 class="text-justify margin-lg">Na Antares os membros são divididos entre seis depertamentos (Aerodinâmica, Administração, Aviônica, Estruturas, Payload e Propulsão), sendo que cada um deles possui um diretor responsável. O capitão e o Vice-Capitão coordenam o trabalho da equipe junto aos diretores.</h4>
-        <span class="glyphicon margin-lg" id="left"><img class="img-thumbnail img-responsive" src="images/fluxograma-membros.png" title="Fluxograma com membros" title="Fluxograma com membros" ></span>
+        <span class="glyphicon margin-lg" id="left"><img class="img-rounded img-responsive" src="images/fluxograma-membros.png" title="Fluxograma com membros" title="Fluxograma com membros" ></span>
     </div>
   </div>
 </div>
+    
 <div class="container-fluid bg-1">
   <div class="row">
     <div class="col-sm-8">
@@ -95,7 +96,7 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
       <button type="button" class="btn btn-danger"  style="margin: 50px 150px 0px 150px">Inscreva-se</button>
     </div>
     <div class="col-sm-4">
-		<span class="glyphicon" id="side"><img class="margin-img img-responsive img-thumbnail" style="max-height: 300px; max-width: 300px;" src="images/foguete3.jpg" alt="Minifoguete" title="Minifoguete"></span>
+		<span class="glyphicon" id="side"><img class="margin-img img-responsive img-rounded" style="max-height: 300px; max-width: 300px;" src="images/foguete3.jpg" alt="Minifoguete" title="Minifoguete"></span>
     </div>
     
   </div>
@@ -145,7 +146,7 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
          <a href="http://www.unicamp.br/unicamp/" target="_blank">	<img style="max-height 500px;" class="img-responsive" src="images/unicamp-50.jpg" title="Unicamp" alt="Unicamp"></a><br>
      </div>
 	 <div style="margin: 0 auto; width: 50%;">
-         <a href="http://www.fem.unicamp.br/index.php/pt-br/" target="_blank"><img style="margin-right: 20px; display: inline;" class="img-responsive" src="images/logo-fem.png" title="FEM" alt="FEM"></a>
+         <a href="http://www.fem.unicamp.br/index.php/pt-br/" target="_blank"><img style="margin-right: 20px; display: inline; max-height: 300px; max-width: 300px;" class="img-responsive" src="images/logo-fem.png" title="FEM" alt="FEM"></a>
          <a href="https://www.fee.unicamp.br/" target="_blank"><img style="display: inline;" class="img-responsive" src="images/logo-feec.png" title="FEEC" alt="FEEC"></a><br>
 	 </div>
   </div>
