--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-<nav id="mynav" style="width: 100% !important;" class="navbar navbar-default navbar-fixed-top">
+<nav id="mynav" style="overflow-x:hidden;" class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -54,7 +54,7 @@
       <p class="text-justify margin-lg">Fundada em 2014 originalmente como FNAF, abrangia apenas alunos e alunas da Engenharia Mecânica. Devido ao seu crescimento e entrada de alunos de outros institutos teve seu nome alterado em 2017 para Equipe Antares de Espaçomodelismo Unicamp.</p>
     </div>
     <div class="col-sm-4 text-center">
-      <span class="glyphicon"><img class="img-rounded img-responsive margin-img" style="max-height: 300px; max-width: 300px;" src="images/foguete2.jpg" title="Lançamento do Mini-Foguete" alt="Lançamento do Mini-Foguete"></span>
+      <img class="max-size img-rounded img-responsive margin-img" src="images/foguete2.jpg" title="Lançamento do Mini-Foguete" alt="Lançamento do Mini-Foguete">
     </div>
   </div>
 </div>
@@ -62,8 +62,8 @@
 <div class="container-fluid bg-2">
   <div class="row">
     <div class="col-sm-4 text-center">
-		<span class="glyphicon"><img class="img-rounded img-responsive margin-img" style="max-height: 300px; max-width: 300px;" src="images/foguete1.jpg" 
-        title="Mini-Foguete" alt="Mini-Foguete"></span>
+		<img class="max-size img-rounded img-responsive margin-img" src="images/foguete1.jpg" 
+        title="Mini-Foguete" alt="Mini-Foguete">
     </div>
     <div class="col-sm-8">
       <h2>Nossos Valores</h2><br>
@@ -96,7 +96,7 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
       <button type="button" class="btn btn-danger"  style="margin: 50px 150px 0px 150px">Inscreva-se</button>
     </div>
     <div class="col-sm-4">
-		<span class="glyphicon" id="side"><img class="margin-img img-responsive img-rounded" style="max-height: 300px; max-width: 300px;" src="images/foguete3.jpg" alt="Minifoguete" title="Minifoguete"></span>
+		<img class="max-size margin-img img-responsive img-rounded" src="images/foguete3.jpg" alt="Minifoguete" title="Minifoguete">
     </div>
     
   </div>
@@ -109,7 +109,7 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
     <h2>Projetos</h2><br>
     <div class="col-sm-4">
         <div class="text-center">
-		<span class="glyphicon" id="side"><img class="img-rounded img-responsive" style="max-height: 250px; max-width: 500px;" src="images/foguete6.jpg" title="Lançamento de Minifoguete" alt="Lançamento de Minifoguete"></span>
+		  <img class="img-rounded img-responsive" style="max-height: 250px; max-width: 500px;" src="images/foguete6.jpg" title="Lançamento de Minifoguete" alt="Lançamento de Minifoguete">
         </div>
         <h3 class="text-center">Minifoguetes</h3><hr>
 		<h4 class="text-justify margin-sm">Consiste na elaboração de minifoguetes das categorias A, B, C, D e E para a participação do Festival de Minifoguetes de Curitiba, organizada pelo Grupo de Foguetes Carl Sagan, da UFPR. Nesse projeto a equipe tem como objetivo desenvolver técnicas de baixo custo para manufatura de minifoguetes e suas tecnologias.</h4>
@@ -145,8 +145,10 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
 	 <div style="margin: 0 auto; width: 30%;">
          <a href="http://www.unicamp.br/unicamp/" target="_blank">	<img style="max-height 500px;" class="img-responsive" src="images/unicamp-50.jpg" title="Unicamp" alt="Unicamp"></a><br>
      </div>
-	 <div style="margin: 0 auto; width: 50%;">
-         <a href="http://www.fem.unicamp.br/index.php/pt-br/" target="_blank"><img style="margin-right: 20px; display: inline; max-height: 300px; max-width: 300px;" class="img-responsive" src="images/logo-fem.png" title="FEM" alt="FEM"></a>
+	 <div style="margin: 0 auto;">
+         <a href="http://www.fem.unicamp.br/index.php/pt-br/" target="_blank"><img style="margin-right: 20px; display: inline;" class="max-size img-responsive" src="images/logo-fem.png" title="FEM" alt="FEM"></a>
+     </div>
+     <div style="margin: 0 auto;">
          <a href="https://www.fee.unicamp.br/" target="_blank"><img style="display: inline;" class="img-responsive" src="images/logo-feec.png" title="FEEC" alt="FEEC"></a><br>
 	 </div>
   </div>
