--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage"><img src="images/logo-branco-navbar.png" alt="Logo Antares"></a>
+      <a class="navbar-brand" href="#myPage"><!--
+          <img src="images/logo-branco-navbar.png" alt="Logo Antares">-->
+        </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
