--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>Antares</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   
   <meta name="author" content="Gabriel Augusto Destro, Renato Noronha Máximo e Eduardo Nakamura">
   <meta name="description" content="Equipe Antares de Espaçomodelismo UNICAMP (antiga FNAF) - Atividade extracurricular, da Universidade Estadual de Campinas, voltada ao desenvolvimento de projetos no ramo aeroespacial.">
@@ -27,8 +28,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage"><!--
-          <img src="images/logo-branco-navbar.png" alt="Logo Antares">-->
+      <a class="navbar-brand" href="#myPage">
+          <img src="images/logo-branco-navbar.png" alt="Logo Antares">
         </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
