--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <p class="text-justify margin-lg">Fundada em 2014 originalmente como FNAF, abrangia apenas alunos e alunas da Engenharia Mecânica. Devido ao seu crescimento e entrada de alunos de outros institutos teve seu nome alterado em 2017 para Equipe Antares de Espaçomodelismo Unicamp.</p>
     </div>
     <div class="col-sm-4 text-center">
-      <img class="max-size img-rounded img-responsive margin-img" src="images/foguete2.jpg" title="Lançamento do Mini-Foguete" alt="Lançamento do Mini-Foguete">
+      <img class="max-size img-rounded img-responsive margin-img" src="images/foguete2.jpg" title="Lançamento do Mini-Foguete" style="margin: 0 auto;" alt="Lançamento do Mini-Foguete">
     </div>
   </div>
 </div>
@@ -65,8 +65,7 @@
 <div class="container-fluid bg-2">
   <div class="row">
     <div class="col-sm-4 text-center">
-		<img class="max-size img-rounded img-responsive margin-img" src="images/foguete1.jpg" 
-        title="Mini-Foguete" alt="Mini-Foguete">
+		<span class="glyphicon" id="side"><img class="max-size img-rounded img-responsive margin-img" style="margin: 0 auto;" src="images/foguete1.jpg" title="Mini-Foguete" alt="Mini-Foguete"></span>
     </div>
     <div class="col-sm-8">
       <h2>Nossos Valores</h2><br>
@@ -99,7 +98,7 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
       <button type="button" class="btn btn-danger"  style="margin: 50px 150px 0px 150px">Inscreva-se</button>
     </div>
     <div class="col-sm-4">
-		<img class="max-size margin-img img-responsive img-rounded" src="images/foguete3.jpg" alt="Minifoguete" title="Minifoguete">
+		<img class="max-size margin-img img-responsive img-rounded" style="margin: 0 auto;" src="images/foguete3.jpg" alt="Minifoguete" title="Minifoguete">
     </div>
     
   </div>
@@ -112,7 +111,7 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
     <h2>Projetos</h2><br>
     <div class="col-sm-4">
         <div class="text-center">
-		  <img class="img-rounded img-responsive" style="max-height: 250px; max-width: 500px;" src="images/foguete6.jpg" title="Lançamento de Minifoguete" alt="Lançamento de Minifoguete">
+		  <span class="glyphicon" id="side"><img class="img-rounded img-responsive" style="max-height: 250px; max-width: 500px;" src="images/foguete6.jpg" title="Lançamento de Minifoguete" alt="Lançamento de Minifoguete"></span>
         </div>
         <h3 class="text-center">Minifoguetes</h3><hr>
 		<h4 class="text-justify margin-sm">Consiste na elaboração de minifoguetes das categorias A, B, C, D e E para a participação do Festival de Minifoguetes de Curitiba, organizada pelo Grupo de Foguetes Carl Sagan, da UFPR. Nesse projeto a equipe tem como objetivo desenvolver técnicas de baixo custo para manufatura de minifoguetes e suas tecnologias.</h4>
