--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <p class="text-justify margin-lg">Fundada em 2014 originalmente como FNAF, abrangia apenas alunos e alunas da Engenharia Mecânica. Devido ao seu crescimento e entrada de alunos de outros institutos teve seu nome alterado em 2017 para Equipe Antares de Espaçomodelismo Unicamp.</p>
     </div>
     <div class="col-sm-4 text-center">
-      <img class="max-size img-rounded img-responsive margin-img" src="images/foguete2.jpg" title="Lançamento do Mini-Foguete" style="margin: 0 auto;" alt="Lançamento do Mini-Foguete">
+      <img class="max-size img-rounded img-responsive margin-img" src="images/foguete2.jpg" title="Lançamento do Mini-Foguete" style="width: 100%;" alt="Lançamento do Mini-Foguete">
     </div>
   </div>
 </div>
@@ -65,7 +65,7 @@
 <div class="container-fluid bg-2">
   <div class="row">
     <div class="col-sm-4 text-center">
-		<span class="glyphicon" id="side"><img class="max-size img-rounded img-responsive margin-img" style="margin: 0 auto;" src="images/foguete1.jpg" title="Mini-Foguete" alt="Mini-Foguete"></span>
+		<span class="glyphicon" id="side"><img class="max-size img-rounded img-responsive margin-img" style="width: 100%;" src="images/foguete1.jpg" title="Mini-Foguete" alt="Mini-Foguete"></span>
     </div>
     <div class="col-sm-8">
       <h2>Nossos Valores</h2><br>
@@ -98,9 +98,8 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
       <button type="button" class="btn btn-danger"  style="margin: 50px 150px 0px 150px">Inscreva-se</button>
     </div>
     <div class="col-sm-4">
-		<img class="max-size margin-img img-responsive img-rounded" style="margin: 0 auto;" src="images/foguete3.jpg" alt="Minifoguete" title="Minifoguete">
+		<img class="max-size margin-img img-responsive img-rounded" style="width: 100%;" src="images/foguete3.jpg" alt="Minifoguete" title="Minifoguete">
     </div>
-    
   </div>
 </div>
     
