--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <p class="text-justify margin-lg">Fundada em 2014 originalmente como FNAF, abrangia apenas alunos e alunas da Engenharia Mecânica. Devido ao seu crescimento e entrada de alunos de outros institutos teve seu nome alterado em 2017 para Equipe Antares de Espaçomodelismo Unicamp.</p>
     </div>
     <div class="col-sm-4 text-center">
-      <img class="max-size img-rounded img-responsive margin-img" src="images/foguete2.jpg" title="Lançamento do Mini-Foguete" style="width: 100%;" alt="Lançamento do Mini-Foguete">
+      <span class="glyphicon" id="side"><img class="max-size img-rounded img-responsive margin-img" src="images/foguete2.jpg" title="Lançamento do Mini-Foguete" style="width: 100%;" alt="Lançamento do Mini-Foguete"></span>
     </div>
   </div>
 </div>
@@ -98,7 +98,7 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
       <button type="button" class="btn btn-danger"  style="margin: 50px 150px 0px 150px">Inscreva-se</button>
     </div>
     <div class="col-sm-4">
-		<img class="max-size margin-img img-responsive img-rounded" style="width: 100%;" src="images/foguete3.jpg" alt="Minifoguete" title="Minifoguete">
+		<span class="glyphicon" id="side"><img class="max-size margin-img img-responsive img-rounded" style="width: 100%;" src="images/foguete3.jpg" alt="Minifoguete" title="Minifoguete"></span>
     </div>
   </div>
 </div>
