--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Antares</title>
+  <link rel="shortcut icon" href="images/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta charset="utf-8">
   <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
@@ -51,27 +52,28 @@
 <!-- Container (About Section) -->
 <div id="about" class="container-fluid bg-2">
   <div class="row">
+    <h2>Sobre nós</h2>
+    <div class="col-sm-4 text-center">
+      <span class="glyphicon" id="side"><img class="max-size img-rounded img-responsive" src="images/foguete2.jpg" title="Lançamento do Mini-Foguete" style="width: 100%;" alt="Lançamento do Mini-Foguete"></span>
+    </div>
     <div class="col-sm-8">
-      <h2>Sobre nós</h2><br>
       <h4 class="text-justify margin-lg">A Equipe Antares de Espaçomodelismo Unicamp é uma das mais recentes extracurriculares catalogadas pela universidade.</h4><br>
       <p class="text-justify margin-lg">Fundada em 2014 originalmente como FNAF, abrangia apenas alunos e alunas da Engenharia Mecânica. Devido ao seu crescimento e entrada de alunos de outros institutos teve seu nome alterado em 2017 para Equipe Antares de Espaçomodelismo Unicamp.</p>
-    </div>
-    <div class="col-sm-4 text-center">
-      <span class="glyphicon" id="side"><img class="max-size img-rounded img-responsive margin-img" src="images/foguete2.jpg" title="Lançamento do Mini-Foguete" style="width: 100%;" alt="Lançamento do Mini-Foguete"></span>
     </div>
   </div>
 </div>
 
 <div class="container-fluid bg-2">
-  <div class="row">
-    <div class="col-sm-4 text-center">
-		<span class="glyphicon" id="side"><img class="max-size img-rounded img-responsive margin-img" style="width: 100%;" src="images/foguete1.jpg" title="Mini-Foguete" alt="Mini-Foguete"></span>
+  <div class="row text-center">
+    <h2>Nossos Valores</h2><hr>
+    <div class="col-sm-4">
+      <h4 class="text-justify margin-sm"><strong>MISSÂO: </strong> Somos hoje uma extracurricular que projeta e desenvolve diversas atividades ligadas ao ramo aeroespacial. Focamos construção de mini-foguetes, foguetes amadores e pesquisa em Cubesats.<br> Atualmente possuímos como principal meta participação em diversos eventos de competição universitário voltados para o seguimento aeroespacial. </h4><br>
     </div>
-    <div class="col-sm-8">
-      <h2>Nossos Valores</h2><br>
-      <h4 class="text-justify margin-lg"><strong>MISSÂO: </strong> Somos hoje uma extracurricular que projeta e desenvolve diversas atividades ligadas ao ramo aeroespacial. Focamos construção de mini-foguetes, foguetes amadores e pesquisa em Cubesats.<br> Atualmente possuímos como principal meta participação em diversos eventos de competição universitário voltados para o seguimento aeroespacial. </h4><br>
-      <p class="text-justify margin-lg"><strong>VISÃO: </strong> Possuímos como filosofia da equipe desde sua criação a busca por inovação e desenvolvimento tecnológico, construção de equipamentos de alta performance e maneiras de fazer nosso trabalho atingir o âmbito social e cultural.
-A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição de Foguetes de Curitiba, nos apogeus de 50m e 200m.</p>
+    <div class="col-sm-4">
+      <p class="text-justify margin-sm"><strong>VISÃO: </strong> Possuímos como filosofia da equipe desde sua criação a busca por inovação e desenvolvimento tecnológico, construção de equipamentos de alta performance e maneiras de fazer nosso trabalho atingir o âmbito social e cultural. A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição de Foguetes de Curitiba, nos apogeus de 50m e 200m.</p>
+    </div>
+    <div class="col-sm-4">
+        <span class="glyphicon" id="side"><img class="margin-sm max-size img-rounded img-responsive" style="width: 100%;" src="images/foguete1.jpg" title="Mini-Foguete" alt="Mini-Foguete"></span>
     </div>
   </div>
 </div>
@@ -80,7 +82,7 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
 <div id="join-us" class="container-fluid bg-1">
   <div class="row">
     <div class="col-sm-12">
-        <h2>Membros</h2><br>
+        <h2>Membros</h2>
 		<h4 class="text-justify margin-lg">Na Antares os membros são divididos entre seis depertamentos (Aerodinâmica, Administração, Aviônica, Estruturas, Payload e Propulsão), sendo que cada um deles possui um diretor responsável. O capitão e o Vice-Capitão coordenam o trabalho da equipe junto aos diretores.</h4>
         <span class="glyphicon margin-lg" id="left"><img class="img-rounded img-responsive" src="images/fluxograma-membros.png" title="Fluxograma com membros" title="Fluxograma com membros" ></span>
     </div>
@@ -91,11 +93,11 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
   <div class="row">
     <div class="col-sm-8">
 	  <div class="text-center">
-         <h2>Faça Parte da Equipe</h2><br>
+         <h2>Faça Parte da Equipe</h2>
 	  </div>
       <h4 class="text-justify margin-lg">Para fazer parte da equipe é necessário passar pelo processo seletivo que normalmente ocorre duas vezes ao ano.</h4><br>
       <p class="text-justify margin-lg">Os processos geralmente ocorrem no começo e no meio do ano e consistem em atividades como dinâmicas em grupo e entrevistas. Quando o processo estiver aberto, disponibilizaremos abaixo um link para a inscrição. Acompanhe nossa página no facebook para ser notificado sobre a abertura do processo!</p>
-      <button type="button" class="btn btn-danger"  style="margin: 50px 150px 0px 150px">Inscreva-se</button>
+      <button type="button" class="btn btn-danger btn-large margin-lg">Inscreva-se</button>
     </div>
     <div class="col-sm-4">
 		<span class="glyphicon" id="side"><img class="max-size margin-img img-responsive img-rounded" style="width: 100%;" src="images/foguete3.jpg" alt="Minifoguete" title="Minifoguete"></span>
@@ -107,7 +109,7 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
 <!-- Container (Projects Section) -->
 <div id="projects" class="container-fluid bg-2">
   <div class="row">
-    <h2>Projetos</h2><br>
+    <h2>Projetos</h2>
     <div class="col-sm-4">
         <div class="text-center">
 		  <span class="glyphicon" id="side"><img class="img-rounded img-responsive" style="max-height: 250px; max-width: 500px;" src="images/foguete6.jpg" title="Lançamento de Minifoguete" alt="Lançamento de Minifoguete"></span>
@@ -139,12 +141,12 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
 <div id="sponsorship" class="container-fluid text-center bg-1">
   <div class="row">
 	 <div class="text-center">
-        <h2>Patrocínio</h2><br>
+        <h2>Patrocínio</h2>
 	    <a href="http://biofabris.com.br/pt/" target="_blank"><img style="margin: 0 auto;" title="biofabris" alt="biofabris logo" class="img-responsive" src="images/logo-biofabris.png"></a><br>
 	 </div>
-	 <h2>Apoio</h2><br>
+	 <h2>Apoio</h2>
 	 <div style="margin: 0 auto; width: 30%;">
-         <a href="http://www.unicamp.br/unicamp/" target="_blank">	<img style="max-height 500px;" class="img-responsive" src="images/unicamp-50.jpg" title="Unicamp" alt="Unicamp"></a><br>
+         <a href="http://www.unicamp.br/unicamp/" target="_blank">	<img style="max-height 500px;" class="img-responsive" src="images/unicamp-50.jpg" title="Unicamp" alt="Unicamp"></a>
      </div>
 	 <div style="margin: 0 auto;">
          <a href="http://www.fem.unicamp.br/index.php/pt-br/" target="_blank"><img style="margin-right: 20px; display: inline;" class="max-size img-responsive" src="images/logo-fem.png" title="FEM" alt="FEM"></a>
@@ -158,7 +160,7 @@ A Equipe Antares angariou em 2016 o 2º lugar em duas categorias na Competição
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-2">
   <div class="row">
-      <h2>Contato</h2><br>
+      <h2>Contato</h2>
       <div class="col-sm-8">
         <!-- Add Google Maps -->
         <div id="googleMap" class="size-map"></div>
